# useful-bot

./: .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt  start_script.py
discord_bot/: bot.py  main.py
discord_bot/cogs/: chance.py  media.py  reactions.py  roles.py
