[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["Alfonso Ghislieri <alfonso.ghis@hotmail.fr>"]

[tool.poetry.scripts]
start = "discord_bot.main:main"

[tool.poetry.dependencies]
python = "3.9.13"
discord = "^1.7.3"
google-search-results = "^2.4.1"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
